logcheck (1.2.38) unstable; urgency=low

  maks:
  * Generalise postfix rule concerning network_biopair_interop.
  * Add rule for ntp message about valid/infalid peers. (Closes #303661)
  * Improve rules .PHONY target + add checkpo rule for the translation check.
  jamie:
  * Add rule in violations.ignore.d/logcheck-postfix for postgrey
    (Closes: #30088)
  * Modify bind notify rule for bind 9.3.x (Closes: #303176)
  * Add various workstation kernel/udev rules for removable devices
    (Closes: #297995)
  * Modify rsync rule to match module names with '.', '-' and '_'.
    Thanks to SATOH Fumiyasu <fumiya@samba.gr.jp> for the patch
    (Closes: #295352)
  * Add nagios rule for UNKNOWN state service notification.
  * Modify postfix anvil rule for 'max connection' statistics
    messages to match smtps connections too.
  * Add new rules for policyd, a postfix policy daemon.

 -- 

logcheck (1.2.37) unstable; urgency=low

  maks:
  * Fix routine message when resolvconf is installed. thanks for patch
    to Thomas Hood <jdthood@aglu.demon.nl> (Closes: #302678)
  * Add postfix rules for local procmail delivery. (Closes: #302744)
  * Fix logcheck su rule reporting valid `su -' use.
  * Add nagios rule for UNREACHABLE messages. thanks for patch to
    Geoff Crompton <geoff.crompton@strategicdata.com.au> (Closes: #298495)
  todd:
  * Revert warning on bad regex code (Closes: #302689)

 -- Todd Troxell <ttroxell@debian.org>  Saturday, 2 Apr 2005 17:57:00 -0500

logcheck (1.2.36) unstable; urgency=low

  jamie:
  * Update rules for gps 1.0>.
  * Add/update rules for innd.
  maks:
  * Add harmless pdns rule at server level.
  * Add rules for cups-lpd at level server.
  * Add violations.ignore.d/logcheck-dcc for the nightly dccifd reporting.
  * Add rule ignore.d.server/kernel for printer out of paper. 
    (Closes: #298291)
  * Add one more apm rule for useless gdm logout message.
  * Add rules for 2 harmless dhcpd and dhclient messages.